2001-12-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.43 development.

2001-11-30  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (make_msgid): New function to create and return an
	rfc2822 compliant Message-ID string.

	(make_date): New function to create and return an rfc2822
	compliant Date string.

	* Defaults.py (PID): Store the process id here so all areas of the
	code can access it without having to re-fetch it.

2001-11-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py (FilterParser.firstmatch): Add support for DJB's
	constant databases via M. J. Pomraning's python-cdb extension
	module.  The `to-cdb', and `from-cdb' source specifiers were
	added.

	* Util.py (findmatch): Bugfix for the `@=' handling syntax.  Now
	split on `@=' using only the last `@'.  This is in case you start
	getting spammed from "@="@randomdomain.com, you will be able to
	match this using the current syntax.
	Patch contributed by Ron Bickers.
		
2001-11-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py (FilterParser.firstmatch): Bugfix.  The DBM
	support was broken for DBM backends that store information in
	multiple external files instead of just one.  The
	os.path.exists(match) check was removed to fix this.

2001-11-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.42 development.

2001-11-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (filter_match): New function to open a filter file and
	try to match the given addresses.  Used to test addresses against
	your filter files with tmda-filter/inject --filter-match.

	* FilterParser.py: Add some exception classes that will be
	utilized only if an instance is created with checking=1, which at
	the moment is only if tmda-filter/inject are using the
	`--filter-match' option.
