@@ -1,3 +1,9 @@
+2001-12-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-filter (locate_pending): Optionally copy the confirmation
+	reply to CONFIRM_ACCEPT_CC.
+	Patch contributed by Matt Armstrong.
+
 2001-11-30  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-filter (usage): Rearrange order of module imports so that
