@@ -1,5 +1,7 @@
 2001-12-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
+	* sample.tmdarc: Add CONFIRM_ACCEPT_CC.
+
 	* tmda.spec: Raise version number to 0.43.
 
 2001-11-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
